@@ -1,3 +1,7 @@
+2007-06-27  Yen-Ju Chen <yjchenx at gmail>
+
+	* Update volume if it is changed by other application.
+
 2007-04-23  Yen-Ju Chen <yjchenx at gmail>
 
 	* Initial import.
